--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ top:0;
     margin:0 auto;
     width:60%;
     border:2px solid black;
-    height: 800px;
+    height: 1500px;
 }
 
 .first-main-section{
@@ -127,4 +127,77 @@ top:0;
     padding-right: 20px;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 
+.fl{ /*se imposto un'altezza fissa ai float si rompe il codice e allinea male i float*/
+    width: 300px;
+    /*width: calc(300px - 80px);*/
+    border:2px solid grey;
+    display: inline-block;
+    margin: 20px 30px 0 20px ;
+}
+
+.column-header{
+    text-align: center;
+    border-bottom: 2px solid grey;
+    padding:5px 0;
+}
+
+.column-main, .column-footer{
+    padding:0 20px; /*Il padding applicato a questa classe perchè metterlo nel float metterebbe padding laterale anche all'header column*/
+}
+
+.column-main>h3{
+    font-size: 25px;
+    padding:20px 0 6px 0;
+}
+
+.column-main>p{
+    padding:15px 0 15px 0;
+    font-size: 13px;
+}
+
+.column-main>p:first-of-type{
+    padding-bottom: 20px;
+}
+
+.column-main>p:nth-child(5){
+    padding-bottom:35px;
+}
+
+.column-main button{
+    padding: 9px 40px
+}
+
+.column-main a{
+    text-decoration: underline;
+    color: rgb(0, 150, 250);
+}
+
+hr{
+    background-color:rgb(209, 199, 199);
+    height: 3px;
+    width: 50px;
+    border-radius: 50px;
+}
+
+.column-footer>h4{
+    padding: 20px 0;
+}
+.column-footer>li{
+    list-style-type: none;
+    font-size: 13px;
+    padding: 10px 0;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.column-footer i{
+    font-size: 15px;
+    color:rgb(0, 150, 250);
+    padding-right: 5px;
+}
