--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@ nav{
     padding:10px 20px;
 }
 
-section{
-    min-width: 1300px;
-}
-
 .top-bar{
     position:relative;
 }    
@@ -58,7 +54,7 @@ top:0;
 }    
 
 #jumbotron{
-    height:620px;
+    height:900px;
     background-color:rgb(175, 203, 236);
 }
 
@@ -70,13 +66,13 @@ top:0;
 }
 
 .container-jumbotron>h1{
-    font-size:75px;
-    padding-bottom: 30px;
+    font-size:100px;
+    padding-bottom: 80px;
 }
 
 .container-jumbotron p{
     padding-bottom: 20px;
-    font-size: 16px;
+    font-size: 25px;
 }
 
 .container-text{
@@ -85,32 +81,32 @@ top:0;
 
 .container-text>p:last-of-type{
     padding-top:10px;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .container-text>button{
     padding:5px 20px;
+    font-size: 20px;
 }
 
 #container-img-jumbotron{
     display: inline-block;
     vertical-align: top;
-    padding-left: 80px;
+    padding-left: 30px;
 }
 
 #container-img-jumbotron>img{
-    height: calc(600px - 200px);
+    height:calc(770px - 200px);
 }
 
 #font-awesome{
-    padding-top:5px;
+    padding-top:10px;
     font-size: 35px;
 }
 
 .container-margin-auto{
     margin:0 auto;
     width:60%;
-    border:2px solid black;
     height: 1500px;
 }
 
@@ -119,12 +115,17 @@ top:0;
 }
 
 .first-main-section>h2{
-    font-size: 35px;
+    font-size: 40px;
     padding-bottom: 50px;
 }
 
 .first-main-section span{
     padding-right: 20px;
+}
+
+.container-float{
+    padding-top:30px;
+    min-width: 1300px;
 }
 
 .clearfix::after {
@@ -133,22 +134,34 @@ top:0;
     display: table;
 }
 
-.fl{ /*se imposto un'altezza fissa ai float si rompe il codice e allinea male i float*/
-    width: 300px;
-    /*width: calc(300px - 80px);*/
-    border:2px solid grey;
+.fl{ 
+    width:350px;
+    height:950px;
+    border:2px solid rgb(172, 172, 172);
     display: inline-block;
-    margin: 20px 30px 0 20px ;
+    margin:0 40px 0 10px;
+    vertical-align: top; /*per allineare i float*/
 }
 
 .column-header{
     text-align: center;
-    border-bottom: 2px solid grey;
+    border-bottom:2px solid rgb(172, 172, 172);
     padding:5px 0;
 }
 
 .column-header i{
     padding-right: 10px;
+}
+
+.column-main>div p{
+    display: inline-block;
+    vertical-align: top;
+    font-size: 15px;
+    padding:20px 0 40px 0;
+}
+
+.column-main div>i{
+    padding-top: 25px;
 }
 
 .column-main, .column-footer{
@@ -162,7 +175,11 @@ top:0;
 
 .column-main>p{
     padding:15px 0 15px 0;
-    font-size: 13px;
+    font-size: 15px;
+}
+
+.grey-text{
+    color:rgb(184, 181, 181);
 }
 
 .column-main>p:first-of-type{
@@ -174,17 +191,19 @@ top:0;
 }
 
 .column-main button{
-    padding: 9px 40px
+    padding: 9px 60px;
+    font-size: 15px;
 }
 
 .column-main a{
     text-decoration: underline;
     color: rgb(0, 150, 250);
+    font-size: 15px;
 }
 
 hr{
-    background-color:rgb(209, 199, 199);
-    height: 3px;
+    background-color: rgb(172, 172, 172);
+    height: 2px;
     width: 50px;
     border-radius: 50px;
 }
@@ -195,7 +214,7 @@ hr{
 
 .column-footer>li{
     list-style-type:none;
-    font-size: 13px;
+    font-size: 15px;
     padding: 10px 0;
     display:inline-block;
     line-height: 15px;
