--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ hr{
 .container-text-partner-dropbox{
     display: inline-block;
     position:absolute;
-    right:20px;
+    right:25px;
     top:140px;
 }
 
@@ -314,4 +314,71 @@ hr{
     color:black;
     font-family:'Open Sans', sans-serif;
     font-weight:800;
+}
+
+.container-row{
+    height: 1000px;
+}
+
+.container-row>h2{
+    font-size:45px;
+    font-weight: 900;
+    padding-bottom: 40px;
+}
+.container-img-text-row{
+    height: 450px;
+    width:300px;
+    display: inline-block;
+    margin:0 auto;
+    width:33%;
+}
+.container-img-row{
+    height: 200px;
+    width: 300px;
+    background-image: url(../img/business-feature-switching-tools.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.container-text-row>h3{
+    font-size:25px;
+    padding-bottom: 10px;
+    font-weight: 900;
+}
+
+.container-text-row>p{
+    font-size: 15px;
+}
+
+/*Background images row*/
+.bg-one-row{
+    background-image: url(../img/business-feature-switching-tools.png);
+    background-size: contain;
+    background-position: center;
+}
+.bg-two-row{
+    background-image: url(../img/business-feature-coordinate-it.png);
+    background-size: contain;
+    background-position: center;
+}
+.bg-three-row{
+    background-image: url(../img/business-feature-multi-device.png);
+    background-size: contain;
+    background-position: center;
+}
+.bg-four-row{
+    background-image: url(../img/business-feature-integrations-it.png);
+    background-size: contain;
+    background-position: center;
+}
+.bg-five-row{
+    background-image: url(../img/business-feature-send-files-it.png);
+    background-size: contain;
+    background-position: center;
+}
+.bg-six-row{
+    background-image: url(../img/business-feature-security.png);
+    background-size: contain;
+    background-position: center;
 }
