--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ top:0;
 .container-margin-auto{
     margin:0 auto;
     width:56%;
+    position:relative;
 }
 
 .first-main-section{
@@ -149,8 +150,10 @@ top:0;
     width:340px;
     height:950px;
     border:1px solid rgb(172, 172, 172);
-    display: inline-block;
-    margin-right: 50px;
+    margin-right: 30px;
+}
+.center-column{
+    margin:0 100px;
 }
 
 .column-header{
@@ -167,6 +170,7 @@ top:0;
     display: inline-block;
     vertical-align: top;
     font-size: 15px;
+    font-weight: 600;
     padding:20px 0 40px 0;
 }
 
@@ -181,11 +185,13 @@ top:0;
 .column-main>h3{
     font-size: 25px;
     padding:20px 0 6px 0;
+    font-weight: 900;
 }
 
 .column-main>p{
     padding:15px 0 15px 0;
     font-size: 15px;
+    font-weight: 600;
 }
 
 .grey-text{
@@ -211,15 +217,10 @@ top:0;
     font-size: 15px;
 }
 
-hr{
-    background-color: rgb(172, 172, 172);
-    height: 2px;
-    width: 50px;
-    border-radius: 50px;
-}
-
 .column-footer>h4{
+    font-size:20px;
     padding: 20px 0;
+    font-weight: 800;
 }
 
 .column-footer>li{
@@ -394,7 +395,6 @@ hr{
 .container-float-fourth-main-section{
     height: 500px;
     background-color: rgb(245, 237, 237);
-    margin-bottom: 100px;
     position:relative;
 }
 
@@ -460,7 +460,7 @@ hr{
 }
 
 .bg-different-blue{
-    background-color: rgb(135, 217, 250);
+    background-color: rgb(178, 212, 226);
 }
 
 .bg-violet{
@@ -491,4 +491,51 @@ hr{
 }
 .container-text-center>p:nth-last-child(1){
     padding-top:30px;
+}
+
+.footer-fourth-main-section{
+    height: 400px;
+    background-color:rgb(178, 212, 226);
+}
+
+.container-footer-fourth-main-section>h3{
+    font-size:50px;
+    font-weight: bolder 900;
+    color:rgb(78, 43, 158);
+    display: inline-block;
+    padding-top: 150px;
+}
+
+.container-footer-fourth-main-section>button{
+    font-size: 18px;
+    padding:10px 50px;
+    border:none;
+    font-weight: 400;
+    position: absolute;
+    right: 0;
+    top:150px;
+}
+
+.answers-main-section>h4{
+    font-size: 30px;
+    padding:40px 0 50px 0;
+    font-weight: 800;
+}
+
+.answers-main-section>p{
+    padding:40px 0 40px 0;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 800;
+}
+
+.answers-main-section>i{
+    padding-left: 530px;
+    font-size: 30px;
+}
+
+.answers-main-section>hr{
+    background-color: rgb(247, 244, 244);
+    height: 2px;
+    border:none;
 }
